--- a/backend/package.json
+++ b/backend/package.json
@@ -11,22 +11,23 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "stripe": "^13.5.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "jest": "^29.6.2",
-    "supertest": "^6.3.3",
     "nodemon": "^3.0.1",
-    "@types/jest": "^29.5.4"
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node",
